--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,15 @@ services:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+  server:
+    profiles:
+      - complete
+    build:
+      context: .
+    environment:
+      DB_HOST: postgres
+    ports:
+      - "8080:8080"
 
 volumes:
   postgres-data:
